# polystream_parquetsave_4mkts

./: getmkts.py  main.py  models.py  orderbook.py  parquet.py  pyproject.toml  read_parquet.py  ws.py
data/20260120/Bitcoin/: Bitcoin_20260120_132724_29352548929740046825002595289528583175050105607574844283703512276781175898868.parquet  Bitcoin_20260120_133001_24142271843909167043739859396722912283886818021398097365945384376482980376617.parquet
data/20260120/Ethereum/: Ethereum_20260120_132724_41426446579410414960157194158251189920666933409957090090660901395077824060183.parquet  Ethereum_20260120_133001_13188194561116689609045182546553877497547040658577713138427231822867297106228.parquet
data/20260120/Solana/: Solana_20260120_132725_2611949286097149505540634399073544989072831254748503864934204931195106691568.parquet  Solana_20260120_133001_5589020107557828316939678516570839158700078041024819487498872632478648426929.parquet
data/20260120/XRP/: XRP_20260120_132726_95063550869551715166383650077373698324013304681096122950653303019889542691360.parquet  XRP_20260120_133002_45504245908396198823811277479510938756645033959054583372953008944804862791578.parquet
